Fixing my responiveness on small screens

--- a/phone.css
+++ b/phone.css
@@ -1,30 +1,31 @@
-/* Home */
-#home{
-    height: 820px;
-}
-.headings{
-    font-size: 1.7rem;
-}
+/* For mobile devices (widths below 530px) */
+@media only screen and (max-width: 530px) {
+    .main {
+        font-size: 1.2rem;
+        top: 15%;
+    }
 
-/* About */
-#pic img{
-    width:300px;
-    height: 175px;
-}
-#intro h2{
-    font-size: 1.5rem;
-}
-/* Portfolio */
-.gallery img{
-    width:270px;
-    height: 150px;
-    margin: 10px;
-}
+    .headings {
+        font-size: 2rem;
+    }
 
-/* Contact*/
-.input{
-    width:80%;
-}
-#msg{
-    width: 70%;
+    .gallery img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .box {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .navbar ul li {
+        display: block;
+        text-align: center;
+        margin: 15px 0;
+    }
+
+    .form input, .form textarea {
+        width: 100%;
+    }
 }
