--- a/tablet.css
+++ b/tablet.css
@@ -1,31 +1,24 @@
-/* Headings */
-.heading{
-    font-size: 2.5rem;
-}
+@media only screen and (max-width: 800px) {
+    .navbar ul {
+        flex-direction: row;
+        justify-content: space-around;
+    }
 
+    .main {
+        font-size: 1.5rem;
+        top: 20%;
+    }
 
-/* About */
-#pic{
-    flex-direction: column;
-    align-items: center;
+    #portfolio, #about, #services {
+        padding: 20px;
+    }
 
-}
-#pic img{
-    width: 475px;
-    height: 300px;
-}
-#intro h2{
-    text-align: center;
-    padding: 10px;
-}
+    .box {
+        width: 45%;
+        margin: 10px;
+    }
 
-/* Contact */
-.input{
-    width: 60%;
-}
-#msg{
-    width:55%;
-}
-#send{
-    width:20%;
+    #contact {
+        padding: 20px;
+    }
 }
